--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,30 +15,28 @@
   <main class="container px-5 p-24 mx-auto">
     <h1 class="text-center text-lg mb-12">board games</h1>
 
-    <div class="flex mb-6">
-      <div class="self-center" id="sort-by"></div>
-      <label class="block self-center ml-4">
+    <div class="md:flex mb-6">
+      <label class="block self-center">
         <div id="searchbox"></div>
       </label>
-      <label class="block self-center ml-4">
-        <input class="border ring-1 pl-2 py-1" type="number" id="players" placeholder="Players">
+      <label class="block self-center md:ml-4">
+        <input class="mb-2 w-full" type="number" id="players" placeholder="Players">
       </label>
-      <label class="block self-center ml-4">
-        <input class="border ring-1 pl-2 py-1" type="number" id="playtime" placeholder="Play Time">
+      <label class="block self-center md:ml-4">
+        <input class="mb-2 w-full" type="number" id="playtime" placeholder="Play Time">
       </label>
-      <div class="self-center ml-4" id="expansions"></div>
+      <div class="self-center md:ml-4" id="sort-by"></div>
+      <div class="self-center md:ml-4" id="expansions"></div>
     </div>
-
-    <!-- <p class="mb-6"><a href="https://boardgamegeek.com/collection/user/mloberg">BoardGameGeek Collection</a></p> -->
 
     <div id="hits"></div>
   </main>
 
-  {{ $params := dict "meiliHost" (.Param "SearchURL") "meiliApiKey" (.Param "SearchAPIKey") }}
+  {{ $params := dict "meiliHost" (.Param "meilisearch_host") "meiliApiKey" (.Param "meilisearch_api_key") }}
   {{ $script := resources.Get "js/app.js" | js.Build (dict "params" $params) }}
   {{ if hugo.IsProduction }}
   {{ $script = $script | minify | fingerprint }}
   {{ end }}
-  <script src="{{ $script.RelPermalink }}"></script>
+  <script src="{{ $script.RelPermalink }}" integrity="{{ $script.Data.Integrity }}"></script>
 </body>
 </html>
